ref: fixed some bugs